Fix babysitter page style on mobile

--- a/public/stylesheets/recover.css
+++ b/public/stylesheets/recover.css
@@ -351,6 +351,7 @@ ul li {
 
 .extreme-help p {
     color: #fff;
+    padding: 0.5em 0.5em 0em 0.5em;
 }
 
 .footer-copyright {
