--- a/public/stylesheets/signup.css
+++ b/public/stylesheets/signup.css
@@ -25,6 +25,9 @@
                                 height: auto;
                                 background-color: #fff;
                                 margin: auto auto 100px;
+                                -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+                                -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+                                box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
                             }
                             /*Style of upload button */
                             
